--- a/lk/Sailing Text/AndroidManifest.xml
+++ b/lk/Sailing Text/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".newgame.CoverFlowExample"></activity>
+        <activity android:name=".startgame.CoverFlowExample"></activity>
     </application>
 
 </manifest>
