--- a/zeraf29/Sailing Text/AndroidManifest.xml
+++ b/zeraf29/Sailing Text/AndroidManifest.xml
@@ -11,16 +11,17 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
+        <activity android:name="Splash">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity><activity
             android:name="mju.summer2012.itproject.team3.lk.sailingtext.MainActivity"
             android:label="@string/title_activity_main" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".startgame.CoverFlowExample"></activity>
+        
     </application>
 
 </manifest>
