--- a/zeraf29/Sailing Text/AndroidManifest.xml
+++ b/zeraf29/Sailing Text/AndroidManifest.xml
@@ -11,16 +11,22 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name="Splash">
+        <activity android:name="Splash"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboardHidden|orientation"
+   			android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity><activity
-            android:name="mju.summer2012.itproject.team3.lk.sailingtext.MainActivity"
-            android:label="@string/title_activity_main" >
         </activity>
-        <activity android:name=".startgame.CoverFlowExample"></activity>
+        
+        <activity
+            android:name="mju.summer2012.itproject.team3.lk.sailingtext.MainActivity"
+            android:label="@string/title_activity_main" 
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:screenOrientation="portrait" android:name=".startgame.CoverFlowExample"></activity>
         
     </application>
 
