--- a/merge/ddd/AndroidManifest.xml
+++ b/merge/ddd/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="kr.ac.mju.dimensiondrivedownside"
+    package="mju.t3rd.sailingtext"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -9,15 +9,15 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name">
+        android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <activity
-            android:name=".GameActivity"
+            android:name=".ssidang.GameActivity"
             android:label="@string/app_name" android:screenOrientation="portrait">
-            <intent-filter>
+        </activity>
+        <activity android:name=".zeraf29.Splash" android:label="@string/app_name" android:screenOrientation="landscape"><intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            </intent-filter></activity>
     </application>
 
 </manifest>
