--- a/merge/ddd/AndroidManifest.xml
+++ b/merge/ddd/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:targetSdkVersion="10" />
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/sailing_text"
         android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <activity
             android:name=".ssidang.GameActivity"
@@ -18,6 +18,11 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter></activity>
+        <activity android:name=".lk.MainActivity" android:screenOrientation="portrait" android:icon="@drawable/sailing_text" android:label="@string/title_activity_main"></activity>
+        <activity android:name=".lk.option.OptionActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name=".lk.option.credit.Credit" android:screenOrientation="portrait"></activity>
+        <activity android:name=".lk.option.tutorial.Tutorial" android:screenOrientation="portrait"></activity>
+        <activity android:name=".lk.startgame.CoverFlowExample" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
