통합 한판 더! 사운드 넣음

--- a/merge/ddd/AndroidManifest.xml
+++ b/merge/ddd/AndroidManifest.xml
@@ -14,7 +14,7 @@
             android:name=".ssidang.GameActivity"
             android:label="@string/app_name" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".zeraf29.Splash" android:label="@string/app_name" android:screenOrientation="landscape"><intent-filter>
+        <activity android:name=".zeraf29.Splash" android:label="@string/app_name" android:screenOrientation="portrait"><intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter></activity>
